--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Local .terraform directories
 **/.terraform/*
+.terraform/
+terraform.tfstate/
+terraform.tfstate.backup/
+.terraform.lock.hcl
 
 # .tfstate files
 *.tfstate
